--- a/weewx/Dockerfile
+++ b/weewx/Dockerfile
@@ -3,7 +3,9 @@ FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-RUN apk upgrade && apk add --no-cache build-base 
+RUN \
+  apk add --no-cache \
+    python3
 
 RUN apk add libusb-dev librtlsdr-dev cmake git sqlite wget py3-configobj py3-cheetah py3-pillow py3-usb py3-setuptools supervisor tzdata jq  autoconf libtool pkgconf sudo
 
