--- a/weewx/Dockerfile
+++ b/weewx/Dockerfile
@@ -4,7 +4,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata wget sudo
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata wget sudo gpg tee
 
 RUN wget -qO - https://weewx.com/keys.html | sudo gpg --dearmor --output /etc/apt/trusted.gpg.d/weewx.gpg \
       && wget -qO - https://weewx.com/apt/weewx-python3.list | sudo tee /etc/apt/sources.list.d/weewx.list
