--- a/weewx/Dockerfile
+++ b/weewx/Dockerfile
@@ -1,19 +1,15 @@
-ARG BUILD_FROM
-FROM $BUILD_FROM
+#ARG BUILD_FROM
+FROM ubuntu:latest
 
 ENV LANG C.UTF-8
 
 RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata wget sudo gpg tee
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
 
-RUN wget -qO - https://weewx.com/keys.html | sudo gpg --dearmor --output /etc/apt/trusted.gpg.d/weewx.gpg \
-      && wget -qO - https://weewx.com/apt/weewx-python3.list | sudo tee /etc/apt/sources.list.d/weewx.list
+RUN apt-get install -y supervisor jq cmake libusb-1.0-0-dev build-essential autoconf libtool pkg-config \
+    python3-configobj python3-pil python3-serial python3-usb python3-pip python3-ephem mariadb-client python3-mysqldb git wget sudo apache2
 
-RUN apt-get update \
-    && apt-get install -y supervisor jq cmake libusb-1.0-0-dev build-essential autoconf libtool pkg-config \
-    python3-configobj python3-pil python3-serial python3-usb python3-pip python3-ephem mariadb-client python3-mysqldb git weewx
-
-RUN sudo pip3 install Cheetah3
+RUN pip3 install Cheetah3
 
 RUN git clone git://git.osmocom.org/rtl-sdr.git && \
       cd rtl-sdr && \
@@ -31,6 +27,12 @@ RUN git clone https://github.com/merbanan/rtl_433  && \
       cmake .. && \
       make && \
       sudo make install
+
+# install weeWX
+RUN wget http://weewx.com/downloads/released_versions/weewx-4.8.0.tar.gz -O /tmp/weewx.tgz && \
+      cd /tmp && \
+      tar zxvf /tmp/weewx.tgz && \
+      cd weewx-* ; python3 ./setup.py build ; sudo python3 ./setup.py install --no-prompt
 
 RUN wget https://github.com/eclipse/paho.mqtt.python/archive/v1.4.0.tar.gz -O /tmp/mqtt.tgz && \
       cd /tmp && \
