--- a/weewx/config.json
+++ b/weewx/config.json
@@ -1,12 +1,10 @@
 {
   "name": "WeeWX",
-  "version": "0.102",
+  "version": "0.103",
   "slug": "hassio_weewx",
   "description": "Add-on for connecting weather stations to Hass.io using WeeWX and MQTT",
   "url": "https://github.com/mdvickst/hassio-addons",
-  "ingress": true,
-  "ingress_port": 80,
-  "ingress_stream": true,
+  "webui": "http://[HOST]:[PORT:80]/weewx",
   "panel_icon": "mdi:weather-hail",
   "arch": [
     "armhf",
