--- a/weewx/config.json
+++ b/weewx/config.json
@@ -1,10 +1,13 @@
 {
   "name": "WeeWX",
-  "version": "0.103",
+  "version": "0.104",
   "slug": "hassio_weewx",
   "description": "Add-on for connecting weather stations to Hass.io using WeeWX and MQTT",
   "url": "https://github.com/mdvickst/hassio-addons",
   "webui": "http://[HOST]:[PORT:80]/weewx",
+  "ingress": true,
+  "ingress_port": 80,
+  "ingress_stream": true,
   "panel_icon": "mdi:weather-hail",
   "arch": [
     "armhf",
