--- a/weewx_mqtt/Dockerfile
+++ b/weewx_mqtt/Dockerfile
@@ -1,9 +1,8 @@
-#ARG BUILD_FROM
-FROM ubuntu:latest
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-RUN 
 
 RUN apt-get update && apt-get install -y sqlite3 wget sudo \
          python3-configobj python3-pil python3-usb python3-pip python3-setuptools \
